# esqlxx

./: .gitignore  CMakeLists.txt  README.md  code.cpp  main.cpp
include/: aggregate.hpp  aggregate_fn.hpp  generator.hpp  grouping_variable.hpp  predicate.hpp  utility.hpp
src/: aggregate.cpp  aggregate_fn.cpp  generator.cpp  grouping_variable.cpp  predicate.cpp  utility.cpp
